<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/settings"
        style="@style/h1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Settings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/btn_delete_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/switch_borrado"
        app:layout_constraintTop_toBottomOf="@id/settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />

    <TextView
        android:id="@+id/idioma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language"
        app:layout_constraintTop_toBottomOf="@id/btn_delete_settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_radio_language"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/idioma"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <RadioButton
            android:id="@+id/btn_rb_spanish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:layoutDirection="rtl"
            android:text="@string/Spanish"
            android:textAlignment="textEnd" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:layoutDirection="rtl"
            android:text="@string/English"
            android:textAlignment="textEnd" />

    </RadioGroup>


    <Button
        android:id="@+id/btn_acerca_de"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_radio_language"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/acerca_de">


    </Button>



    <Button
        android:id="@+id/btn_logout_settings"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"

        app:layout_constraintTop_toBottomOf="@id/btn_acerca_de"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>